fixing bug extra white spaces Thanks Akash srinivasan to let to find this bug

--- a/02NameConversion/index.css
+++ b/02NameConversion/index.css
@@ -81,10 +81,6 @@
   color: #0D0D0D;
 }
 
-/* .clipBoard:active{
-  color: #eaedf1;
-} */
-
 #convert-btn, #reset-btn {
   outline: none;
   box-shadow: none;
